--- a/Foodfy/package.json
+++ b/Foodfy/package.json
@@ -1,15 +1,21 @@
 {
   "name": "foodfy",
-  "version": "1.0.0",
+  "version": "1.0.5",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "npm-run-all -p nodemon browsersync",
+    "nodemon": "nodemon server.js",
+    "browsersync": "browser-sync start --proxy http://localhost:5000 --files 'public, views'"
   },
   "dependencies": {
     "express": "^4.17.1",
+    "intl": "^1.2.5",
+    "method-override": "^3.0.0",
     "nunjucks": "^3.2.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.2"
+    "browser-sync": "^2.26.7",
+    "nodemon": "^2.0.1",
+    "npm-run-all": "^4.1.5"
   }
 }
