--- a/Foodfy/package.json
+++ b/Foodfy/package.json
@@ -1,21 +1,24 @@
 {
   "name": "foodfy",
-  "version": "1.0.5",
-  "main": "server.js",
+  "version": "1.0.0",
+  "main": "src/server.js",
   "scripts": {
     "start": "npm-run-all -p nodemon browsersync",
-    "nodemon": "nodemon server.js",
-    "browsersync": "browser-sync start --proxy http://localhost:5000 --files 'public, views'"
+    "nodemon": "nodemon src/server.js",
+    "browsersync": "browser-sync start --proxy http://localhost:5000 --files 'public, src/app/views'"
   },
   "dependencies": {
     "express": "^4.17.1",
     "intl": "^1.2.5",
     "method-override": "^3.0.0",
-    "nunjucks": "^3.2.0"
+    "nunjucks": "^3.2.0",
+    "pg": "^7.18.1"
   },
   "devDependencies": {
     "browser-sync": "^2.26.7",
     "nodemon": "^2.0.1",
-    "npm-run-all": "^4.1.5"
-  }
+    "npm-run-all": "^4.1.5",
+    "shelljs": "^0.8.3"
+  },
+  "license": "MIT"
 }
