--- a/module-6/package.json
+++ b/module-6/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "intl": "^1.2.5",
     "method-override": "^3.0.0",
     "multer": "^1.4.2",
     "nunjucks": "^3.2.0",
