--- a/.gitignore
+++ b/.gitignore
@@ -144,4 +144,12 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# Config files
+mailer.js
+!lib/
+config/db.js
+config/session.js
+!config/
+
+
 # End of https://www.gitignore.io/api/node,windows,visualstudiocode
