--- a/Foodfy/package.json
+++ b/Foodfy/package.json
@@ -8,12 +8,16 @@
     "browsersync": "browser-sync start --proxy http://localhost:5000 --files 'public, src/app/views'"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "connect-pg-simple": "^6.1.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "intl": "^1.2.5",
     "method-override": "^3.0.0",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.5",
     "nunjucks": "^3.2.0",
-    "pg": "^7.18.1"
+    "pg": "^7.17.1"
   },
   "devDependencies": {
     "browser-sync": "^2.26.7",
