--- a/Foodfy/package.json
+++ b/Foodfy/package.json
@@ -14,6 +14,7 @@
     "express-session": "^1.17.0",
     "intl": "^1.2.5",
     "method-override": "^3.0.0",
+    "minimist": "^1.2.5",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.5",
     "nunjucks": "^3.2.0",
