--- a/Foodfy/package.json
+++ b/Foodfy/package.json
@@ -12,7 +12,9 @@
     "connect-pg-simple": "^6.1.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "faker": "^4.1.0",
     "intl": "^1.2.5",
+    "knex": "^0.20.13",
     "method-override": "^3.0.0",
     "minimist": "^1.2.5",
     "multer": "^1.4.2",
