--- a/FoodfyProject/package.json
+++ b/FoodfyProject/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "src/server.js",
   "scripts": {
-    "start": "npm-run-all -p nodemon browsersync",
+    "start": "node src/server.js",
+    "dev": "npm-run-all -p nodemon browsersync",
     "nodemon": "nodemon src/server.js",
     "browsersync": "browser-sync start --proxy http://localhost:5000 --files 'public, src/app/views'"
   },
@@ -18,7 +19,7 @@
     "minimist": "^1.2.5",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.5",
-    "nunjucks": "^3.2.0",
+    "nunjucks": "^3.2.1",
     "pg": "^7.17.1"
   },
   "devDependencies": {
